<resources>
    <string name="app_name">Song of the Day</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Profile</string>
    <string name="action_login">Login</string>

    <string name="menu_home">Home</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_auth">Login</string>
    <string name="menu_signup">Signup</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_signup">signup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>