<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="uk.ac.abertay.songoftheday.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_playlist"
        android:name="uk.ac.abertay.songoftheday.ui.playlist.PlaylistFragment"
        android:label="@string/menu_playlist"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="uk.ac.abertay.songoftheday.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/nav_signup"
        android:name="uk.ac.abertay.songoftheday.ui.auth.AuthFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />
    <fragment
        android:id="@+id/nav_auth"
        android:name="uk.ac.abertay.songoftheday.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth" >
        <action
            android:id="@+id/action_nav_auth_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="uk.ac.abertay.songoftheday.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_auth"
            app:destination="@id/nav_auth" />
    </fragment>
</navigation>